# MyAlmondEngine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  common.cpp  common.h  glad.c
src/camera/: Camera.cpp  Camera.h
src/engine/: Engine.cpp  Engine.h
src/levels/: Level.cpp  Level.h
src/model/: Mesh.cpp  Mesh.h
src/objects/: Component.cpp  Component.h  Object.cpp  Object.h
src/objects/Components/: RigidBody3D.cpp  RigidBody3D.h
src/resources/shaders/: default.vert
src/shader/: Shader.cpp  Shader.h
src/transforms/: Vectors.cpp  Vectors.h
